--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -29,6 +29,10 @@ $error-font-size: 5rem;
   height: 100%;
   padding: 0 0 $player-wrapper-padding 0;
   width: 100%;
+
+  .fullscreen-button {
+    visibility: hidden;
+  }
 }
 
 .hidden-section {
@@ -38,6 +42,19 @@ $error-font-size: 5rem;
     "application content"
     "application action-bar";
   grid-template-columns: 0% auto;
+
+  .fullscreen-button {
+    visibility: visible;
+  }
+}
+
+.fullscreen-content {
+  grid-template-columns: 0% auto;
+  grid-template-rows: 0% auto auto 0%;
+
+  .fullscreen-button {
+    visibility: visible;
+  }
 }
 
 .error-code,
@@ -145,6 +162,20 @@ $error-font-size: 5rem;
   width: 100%;
 }
 
+.fullscreen-button {
+  margin-top: $margin;
+  position: fixed;
+  z-index: 1;
+
+  [dir="ltr"] & {
+    right: 0;
+  }
+
+  [dir="rtl"] & {
+    left: 0;
+  }
+}
+
 @media (min-width: $media-min-width) {
   .player-wrapper {
     grid-template-areas:
@@ -155,10 +186,19 @@ $error-font-size: 5rem;
       "application action-bar";
     grid-template-columns: $section-width auto;
     grid-template-rows: $navigation-bar-height auto auto auto $action-bar-height;
+
+    .fullscreen-button {
+      visibility: visible;
+    }
   }
 
   .hidden-section {
     grid-template-columns: 0% auto;
+  }
+
+  .fullscreen-content {
+    grid-template-columns: 0% auto;
+    grid-template-rows: 0% auto auto auto 0%;
   }
 
   @media (max-height: $media-max-height) {
@@ -168,6 +208,11 @@ $error-font-size: 5rem;
 
     .hidden-section {
       grid-template-columns: 0% auto;
+    }
+
+    .fullscreen-content {
+      grid-template-columns: 0% auto;
+      grid-template-rows: 0% auto auto auto 0%;
     }
   }
 }
