--- a/src/components/utils/index.scss
+++ b/src/components/utils/index.scss
@@ -29,7 +29,7 @@ $button-size: 2.75rem;
   }
 
   .solid {
-    background-color: $blue;
+    background-color: $button-color;
     border: none;
 
     &:focus {
