--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -13,6 +13,12 @@ $blue-lightest: #e4ecf2;
 
 $red: #df2721;
 
+$button-color: $blue;
+
+$cursor-color: $red;
+
+$thumbnails-background-color: $blue-lighter;
+
 $body-background-color: $gray-dark;
 $section-background-color: white;
 $main-background-color: $gray-dark;
