More button first version

--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -25,7 +25,7 @@
   content: "\e901";
 }
 
-.icon-more:before {
+.icon-horizontal-more:before {
   content: "\e902";
 }
 
@@ -369,7 +369,7 @@
   content: "\e957";
 }
 
-.icon-more:before {
+.icon-vertical-more:before {
   content: "\e902";
   transform: rotate(90deg);
 }
