--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -2,6 +2,8 @@ $control-bar-height: 30px;
 $media-min-width: 480px;
 $media-max-height: 400px;
 
+$modal-max-width: 320px;
+
 $video-height: 480px;
 $video-width: 640px;
 
@@ -12,6 +14,7 @@ $bar-height: 60px;
 
 $navigation-bar-height: $bar-height;
 $action-bar-height: $bar-height;
+$modal-bar-height: $bar-height;
 
 $media-fit-height: calc((#{$video-height} / 2) - #{$bar-height});
 $media-fit-height-small: calc(((#{$video-height} / 8) * 3) - #{$bar-height});
