More modal extra style

--- a/src/components/chat/index.scss
+++ b/src/components/chat/index.scss
@@ -113,7 +113,7 @@ $avatar-size: 2.25rem;
   }
 
   .name {
-    font-weight: $font-weight-bold;
+    font-weight: $font-weight-semi-bold;
     max-width: 60%;
     overflow: hidden;
     text-overflow: ellipsis;
