--- a/src/components/more/index.scss
+++ b/src/components/more/index.scss
@@ -26,13 +26,20 @@
   padding: 0 $padding-small;
   width: 80%;
 
-  .control {
+  .control,
+  .header,
+  .body,
+  .footer {
     box-sizing: border-box;
     display: flex;
+    width: 100%;
+  }
+
+
+  .control {
     flex-direction: row-reverse;
     height: $modal-bar-height;
     padding: $padding-small;
-    width: 100%;
 
     .button {
       color: $gray-light;
@@ -41,18 +48,19 @@
   }
 
   .header {
-    box-sizing: border-box;
-    display: flex;
     flex-direction: column;
     font-weight: $font-weight-regular;
     padding: 0 0 $padding 0;
-    width: 100%;
 
-    .name {
+    .name,
+    .date {
       box-sizing: border-box;
       display: flex;
-      font-size: larger;
       justify-content: center;
+    }
+
+    .name {
+      font-size: larger;
       overflow: hidden;
       padding: 0 0 $padding-extra-small 0;
       text-overflow: ellipsis;
@@ -60,9 +68,7 @@
     }
 
     .date {
-      box-sizing: border-box;
       color: $gray-light;
-      display: flex;
       font-size: small;
       padding: 0 $padding-small;
 
@@ -74,39 +80,47 @@
   }
 
   .body {
-    box-sizing: border-box;
-    display: flex;
     flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 0 $padding;
-    width: 100%;
 
     .item {
       box-sizing: border-box;
       display: flex;
       font-size: large;
+      font-weight: $font-weight-semi-bold;
       padding: $padding-small 0;
+
+      .key {
+        color: $gray;
+      }
 
       .value {
         box-sizing: border-box;
         padding: 0 $padding;
       }
+
+      .green {
+        color: $green;
+      }
+
+      .red {
+        color: $red;
+      }
     }
   }
 
   .footer {
-    box-sizing: border-box;
     align-items: center;
-    display: flex;
-    height: $modal-bar-height;
-    padding: 0 $padding;
-    width: 100%;
+    padding: $padding;
 
     .item {
       box-sizing: border-box;
       color: $gray-light;
       display: flex;
       font-size: small;
-      padding: $padding-extra-small 0;
+      padding: $padding 0 0 0;
       width: 100%;
 
       .value {
