--- a/src/components/more/index.scss
+++ b/src/components/more/index.scss
@@ -119,10 +119,11 @@
       color: $gray-light;
       display: flex;
       font-size: small;
+      justify-content: end;
       padding: $padding 0 0 0;
       width: 100%;
 
-      .value {
+      .key {
         box-sizing: border-box;
         padding: 0 $padding-small;
       }
