--- a/src/components/utils/index.scss
+++ b/src/components/utils/index.scss
@@ -33,7 +33,7 @@ $button-size: 2.75rem;
     border: none;
 
     &:focus {
-      box-shadow: 0 0 0 $margin-extra-small $blue;
+      box-shadow: 0 0 0 $margin-extra-small $button-color;
     }
   }
 
