Search first commit

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -17,6 +17,8 @@ $green: #008081;
 
 $button-color: $blue;
 
+$marker-color: $blue;
+
 $cursor-color: $red;
 
 $thumbnails-background-color: $blue-lighter;
