--- a/src/components/more/index.scss
+++ b/src/components/more/index.scss
@@ -3,15 +3,15 @@
 @import 'src/styles/icons';
 @import 'src/styles/sizes';
 
-.header,
-.body,
-.footer {
+.more-header,
+.more-body,
+.more-footer {
   box-sizing: border-box;
   display: flex;
   width: 100%;
 }
 
-.header {
+.more-header {
   flex-direction: column;
   font-weight: $font-weight-regular;
   padding: 0 0 $padding 0;
@@ -43,8 +43,9 @@
   }
 }
 
-.body {
-  flex-direction: column;
+.more-body {
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   overflow-x: hidden;
   overflow-y: auto;
   padding: 0 $padding;
@@ -75,7 +76,7 @@
   }
 }
 
-.footer {
+.more-footer {
   align-items: center;
   padding: $padding;
 
@@ -84,7 +85,7 @@
     color: $gray-light;
     display: flex;
     font-size: small;
-    justify-content: end;
+    justify-content: flex-end;
     padding: $padding 0 0 0;
     width: 100%;
 
