--- a/src/components/chat/index.scss
+++ b/src/components/chat/index.scss
@@ -1,9 +1,6 @@
 @import 'src/styles/colors';
 @import 'src/styles/fonts';
-@import 'src/styles/icons';
 @import 'src/styles/sizes';
-
-$avatar-size: 2.25rem;
 
 .chat-wrapper {
   display: flex;
@@ -47,50 +44,19 @@ $avatar-size: 2.25rem;
   }
 }
 
-.avatar-wrapper {
-  display: flex;
-  height: 100%;
-
-  [dir="ltr"] & {
-    margin: 0 $margin 0 0;
-  }
-
-  [dir="rtl"] & {
-    margin: 0 0 0 $margin;
-  }
-
-  .inactive {
-    filter: opacity(50%);
-  }
-}
-
-.avatar {
-  border-radius: 50%;
-  cursor: pointer;
-  height: $avatar-size;
-  text-align: center;
-  width: $avatar-size;
-
-  .initials {
-    align-items: center;
-    color: white;
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    text-transform: capitalize;
-    width: 100%;
-  }
-
-  &:hover {
-    box-shadow: 0 0 0 $margin-small $gray-lighter;
-  }
-}
-
 .message {
   .data {
     display: flex;
     flex-direction: column;
-    width:100%
+    width:100%;
+
+    [dir="ltr"] & {
+      margin: 0 0 0 $margin;
+    }
+
+    [dir="rtl"] & {
+      margin: 0 $margin 0 0;
+    }
   }
 
   .info {
@@ -137,7 +103,19 @@ $avatar-size: 2.25rem;
     }
   }
 
+  .interactive {
+    display: flex;
+
+    .avatar {
+      cursor: pointer;
+
+      &:hover {
+        box-shadow: 0 0 0 $margin-small $gray-lighter;
+      }
+    }
+  }
+
   .inactive {
-    color: $gray-lighter;
+    filter: opacity(50%);
   }
 }
