--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -33,6 +33,10 @@ $error-font-size: 5rem;
   .fullscreen-button {
     visibility: hidden;
   }
+
+  .talkers-wrapper {
+    visibility: hidden;
+  }
 }
 
 .hidden-section {
@@ -46,6 +50,10 @@ $error-font-size: 5rem;
   .fullscreen-button {
     visibility: visible;
   }
+
+  .talkers-wrapper {
+    visibility: visible;
+  }
 }
 
 .fullscreen-content {
@@ -53,6 +61,10 @@ $error-font-size: 5rem;
   grid-template-rows: 0% auto auto 0%;
 
   .fullscreen-button {
+    visibility: visible;
+  }
+
+  .talkers-wrapper {
     visibility: visible;
   }
 }
@@ -233,6 +245,10 @@ $error-font-size: 5rem;
     grid-template-rows: $navigation-bar-height $media-fit-height auto auto $action-bar-height;
 
     .fullscreen-button {
+      visibility: visible;
+    }
+
+    .talkers-wrapper {
       visibility: visible;
     }
   }
