Add custom styles
A custom style is defined as an URL search parameter. Custom styles must be served
from a single host and the style name must be registered at the config file.

--- a/src/components/utils/avatar/index.scss
+++ b/src/components/utils/avatar/index.scss
@@ -13,7 +13,7 @@ $avatar-size: 2.25rem;
 
     .initials {
       align-items: center;
-      color: white;
+      color: var(--white);
       display: flex;
       height: 100%;
       justify-content: center;
