--- a/src/utils/videojs/index.scss
+++ b/src/utils/videojs/index.scss
@@ -1,5 +1,3 @@
-@import 'src/styles/colors';
-
 $marker-size: .3rem;
 
 .vjs-marker {
@@ -9,7 +7,7 @@ $marker-size: .3rem;
 }
 
 .vjs-marker-item {
-  background-color: $marker-color;
+  background-color: var(--marker-color);
   height: 100%;
   position: absolute;
   width: $marker-size;
