--- a/src/components/about/index.scss
+++ b/src/components/about/index.scss
@@ -1,4 +1,3 @@
-@import 'src/styles/colors';
 @import 'src/styles/fonts';
 @import 'src/styles/icons';
 @import 'src/styles/sizes';
@@ -32,7 +31,7 @@
   }
 
   .subtitle {
-    color: $gray-light;
+    color: var(--gray-light);
     font-size: small;
     padding: 0 $padding-small;
 
@@ -58,7 +57,7 @@
     padding: $padding-small 0;
 
     .key {
-      color: $gray;
+      color: var(--gray);
     }
 
     .value {
@@ -67,11 +66,11 @@
     }
 
     .green {
-      color: $green;
+      color: var(--green);
     }
 
     .red {
-      color: $red;
+      color: var(--red);
     }
   }
 }
@@ -82,7 +81,7 @@
 
   .item {
     box-sizing: border-box;
-    color: $gray-light;
+    color: var(--gray-light);
     display: flex;
     font-size: small;
     justify-content: flex-end;
