--- a/src/components/bars/index.scss
+++ b/src/components/bars/index.scss
@@ -1,9 +1,8 @@
-@import 'src/styles/colors';
 @import 'src/styles/fonts';
 @import 'src/styles/sizes';
 
 .navigation-bar {
-  background-color: $main-background-color;
+  background-color: var(--main-background-color);
   grid-area: navigation-bar;
 
   .title {
@@ -18,20 +17,20 @@
   .button-wrapper {
     .solid {
       &:focus {
-        border: solid $main-background-color;
+        border: solid var(--main-background-color);
       }
     }
   }
 }
 
 .action-bar {
-  background-color: $main-background-color;
+  background-color: var(--main-background-color);
   grid-area: action-bar;
 
   .button-wrapper {
     .solid {
       &:focus {
-        border: solid $main-background-color;
+        border: solid var(--main-background-color);
       }
     }
   }
