--- a/src/components/chat/index.scss
+++ b/src/components/chat/index.scss
@@ -1,4 +1,3 @@
-@import 'src/styles/colors';
 @import 'src/styles/fonts';
 @import 'src/styles/sizes';
 
@@ -75,7 +74,7 @@
 
   .time {
     align-items: center;
-    color: $gray-light;
+    color: var(--gray-light);
     display: flex;
     font-size: x-small;
 
@@ -110,7 +109,7 @@
       cursor: pointer;
 
       &:hover {
-        box-shadow: 0 0 0 $margin-small $gray-lighter;
+        box-shadow: 0 0 0 $margin-small var(--gray-lighter);
       }
     }
   }
