--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,4 +1,3 @@
-@import 'src/styles/colors';
 @import 'src/styles/fonts';
 @import 'src/styles/sizes';
 
@@ -76,7 +75,7 @@ $error-font-size: 5rem;
 }
 
 .error-code {
-  color: white;
+  color: var(--white);
   font-size: $error-font-size;
   font-weight: $font-weight-bold;
 }
@@ -86,7 +85,7 @@ $error-font-size: 5rem;
 
   div {
     animation: dots 1.4s infinite ease-in-out both;
-    background-color: white;
+    background-color: var(--white);
     border-radius: 100%;
     display: inline-block;
     height: $loading-dot-size;
@@ -120,7 +119,7 @@ $error-font-size: 5rem;
 }
 
 .content {
-  background-color: $main-background-color;
+  background-color: var(--main-background-color);
   display: flex;
   grid-area: content;
   height: 100%;
@@ -132,58 +131,58 @@ $error-font-size: 5rem;
   }
 
   .video-js {
-    background-color: $main-background-color;
+    background-color: var(--main-background-color);
   }
 
   .button-wrapper {
     .solid {
       &:focus {
-        box-shadow: 0 0 0 $margin-extra-small transparentize($button-color, .5);
+        box-shadow: 0 0 0 $margin-extra-small var(--button-box-shadow-color);
       }
     }
   }
 }
 
 .swapped-content {
-  background-color: $section-background-color;
+  background-color: var(--section-background-color);
   grid-area: media;
 
   .video-js {
-    background-color: $section-background-color;
+    background-color: var(--section-background-color);
   }
 }
 
 .media {
-  background-color: $section-background-color;
+  background-color: var(--section-background-color);
   display: flex;
   grid-area: media;
   height: 100%;
   width: 100%;
 
   .video-js {
-    background-color: $section-background-color;
+    background-color: var(--section-background-color);
   }
 }
 
 .swapped-media {
-  background-color: $main-background-color;
+  background-color: var(--main-background-color);
   grid-area: content;
 
   .video-js {
-    background-color: $main-background-color;
+    background-color: var(--main-background-color);
   }
 
   .button-wrapper {
     .solid {
       &:focus {
-        box-shadow: 0 0 0 $margin-extra-small transparentize($button-color, .5);
+        box-shadow: 0 0 0 $margin-extra-small var(--button-box-shadow-color);
       }
     }
   }
 }
 
 .application {
-  background-color: $section-background-color;
+  background-color: var(--section-background-color);
   display: flex;
   flex-direction: column;
   grid-area: application;
@@ -198,7 +197,7 @@ $error-font-size: 5rem;
 
     .application-icon {
       box-sizing: border-box;
-      color: $gray;
+      color: var(--gray);
       display: flex;
       font-size: large;
       font-weight: $font-weight-semi-bold;
@@ -213,7 +212,7 @@ $error-font-size: 5rem;
     }
 
     .inactive {
-      color: $gray-light;
+      color: var(--gray-light);
       cursor: pointer;
     }
   }
