--- a/src/components/presentation/index.scss
+++ b/src/components/presentation/index.scss
@@ -1,4 +1,3 @@
-@import 'src/styles/colors';
 @import 'src/styles/images';
 
 $cursor-size: .5rem;
@@ -20,7 +19,7 @@ $cursor-size: .5rem;
   width: 100%;
 
   .cursor {
-    fill: $cursor-color;
+    fill: var(--cursor-color);
     r: $cursor-size;
   }
 
