--- a/src/components/search/index.scss
+++ b/src/components/search/index.scss
@@ -1,4 +1,3 @@
-@import 'src/styles/colors';
 @import 'src/styles/fonts';
 @import 'src/styles/icons';
 @import 'src/styles/sizes';
@@ -23,7 +22,7 @@
   .button-wrapper {
     .solid {
       &:focus {
-        box-shadow: 0 0 0 $margin-extra-small transparentize($button-color, .5);
+        box-shadow: 0 0 0 $margin-extra-small var(--button-box-shadow-color);
       }
     }
   }
@@ -35,7 +34,7 @@
 
   .result {
     box-sizing: border-box;
-    color: $gray-light;
+    color: var(--gray-light);
     display: flex;
     font-size: small;
     justify-content: flex-end;
