--- a/src/components/thumbnails/index.scss
+++ b/src/components/thumbnails/index.scss
@@ -1,4 +1,3 @@
-@import 'src/styles/colors';
 @import 'src/styles/fonts';
 @import 'src/styles/icons';
 @import 'src/styles/sizes';
@@ -8,7 +7,7 @@ $thumbnails-wrapper-bottom: calc(#{$control-bar-height} + #{$action-bar-height})
 $thumbnail-height: 90px;
 
 .thumbnails-wrapper {
-  background-color: $thumbnails-background-color;
+  background-color: var(--thumbnails-background-color);
   bottom: $thumbnails-wrapper-bottom;
   box-sizing: border-box;
   overflow-x: hidden;
@@ -51,7 +50,7 @@ $thumbnail-height: 90px;
   }
 
   .screenshare {
-    color: $gray;
+    color: var(--gray);
     font-size: xx-large;
     font-weight: $font-weight-semi-bold;
   }
