--- a/src/components/utils/button/index.scss
+++ b/src/components/utils/button/index.scss
@@ -1,4 +1,3 @@
-@import 'src/styles/colors';
 @import 'src/styles/fonts';
 @import 'src/styles/icons';
 @import 'src/styles/sizes';
@@ -16,7 +15,7 @@ $button-size: 2.75rem;
     font-size: large;
     height: $button-size;
     width: $button-size;
-    color: white;
+    color: var(--white);
   }
 
   .default {
@@ -29,11 +28,11 @@ $button-size: 2.75rem;
   }
 
   .solid {
-    background-color: $button-color;
+    background-color: var(--button-color);
     border: none;
 
     &:focus {
-      box-shadow: 0 0 0 $margin-extra-small $button-color;
+      box-shadow: 0 0 0 $margin-extra-small var(--button-color);
     }
   }
 
@@ -47,7 +46,7 @@ $button-size: 2.75rem;
   }
 
   .disabled {
-    background-color: $gray-light;
+    background-color: var(--gray-light);
     border: none;
     cursor: not-allowed;
   }
