--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  background-color: $body-background-color;
+  background-color: var(--body-background-color);
   font-family: $font-family;
   font-weight: $font-weight-regular;
   margin: 0;
