Avatar colors as variables

--- a/src/components/utils/avatar/index.scss
+++ b/src/components/utils/avatar/index.scss
@@ -21,4 +21,68 @@ $avatar-size: 2.25rem;
       width: 100%;
     }
   }
+
+  .avatar-zero {
+    background-color: var(--avatar-zero-color);
+  }
+
+  .avatar-one {
+    background-color: var(--avatar-one-color);
+  }
+
+  .avatar-two {
+    background-color: var(--avatar-two-color);
+  }
+
+  .avatar-three {
+    background-color: var(--avatar-three-color);
+  }
+
+  .avatar-four {
+    background-color: var(--avatar-four-color);
+  }
+
+  .avatar-five {
+    background-color: var(--avatar-five-color);
+  }
+
+  .avatar-six {
+    background-color: var(--avatar-six-color);
+  }
+
+  .avatar-seven {
+    background-color: var(--avatar-seven-color);
+  }
+
+  .avatar-eight {
+    background-color: var(--avatar-eight-color);
+  }
+
+  .avatar-nine {
+    background-color: var(--avatar-nine-color);
+  }
+
+  .avatar-ten {
+    background-color: var(--avatar-ten-color);
+  }
+
+  .avatar-eleven {
+    background-color: var(--avatar-eleven-color);
+  }
+
+  .avatar-twelve {
+    background-color: var(--avatar-twelve-color);
+  }
+
+  .avatar-thirteen {
+    background-color: var(--avatar-thirteen-color);
+  }
+
+  .avatar-fourteen {
+    background-color: var(--avatar-fourteen-color);
+  }
+
+  .avatar-fifteen {
+    background-color: var(--avatar-fifteen-color);
+  }
 }
