--- a/src/components/about/index.scss
+++ b/src/components/about/index.scss
@@ -1,4 +1,3 @@
-@import 'src/styles/fonts';
 @import 'src/styles/icons';
 @import 'src/styles/sizes';
 
@@ -12,7 +11,7 @@
 
 .about-header {
   flex-direction: column;
-  font-weight: $font-weight-regular;
+  font-weight: var(--font-weight-regular);
   padding: 0 0 $padding 0;
 
   .title,
@@ -53,7 +52,7 @@
     box-sizing: border-box;
     display: flex;
     font-size: large;
-    font-weight: $font-weight-semi-bold;
+    font-weight: var(--font-weight-semi-bold);
     padding: $padding-small 0;
 
     .key {
