--- a/src/components/bars/index.scss
+++ b/src/components/bars/index.scss
@@ -1,4 +1,3 @@
-@import 'src/styles/fonts';
 @import 'src/styles/sizes';
 
 .navigation-bar {
@@ -7,7 +6,7 @@
 
   .title {
     color: white;
-    font-weight: $font-weight-light;
+    font-weight: var(--font-weight-light);
     overflow: hidden;
     padding: $padding-small;
     text-overflow: ellipsis;
