--- a/src/components/chat/index.scss
+++ b/src/components/chat/index.scss
@@ -1,4 +1,3 @@
-@import 'src/styles/fonts';
 @import 'src/styles/sizes';
 
 .chat-wrapper {
@@ -65,7 +64,7 @@
   }
 
   .name {
-    font-weight: $font-weight-semi-bold;
+    font-weight: var(--font-weight-semi-bold);
     max-width: 60%;
     overflow: hidden;
     text-overflow: ellipsis;
