--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,4 +1,3 @@
-@import 'src/styles/fonts';
 @import 'src/styles/sizes';
 
 $player-wrapper-padding: $control-bar-height;
@@ -77,7 +76,7 @@ $error-font-size: 5rem;
 .error-code {
   color: var(--white);
   font-size: $error-font-size;
-  font-weight: $font-weight-bold;
+  font-weight: var(--font-weight-bold);
 }
 
 .loading-dots {
@@ -200,7 +199,7 @@ $error-font-size: 5rem;
       color: var(--gray);
       display: flex;
       font-size: large;
-      font-weight: $font-weight-semi-bold;
+      font-weight: var(--font-weight-semi-bold);
 
       [dir="ltr"] & {
         padding-left: $padding;
