--- a/src/components/video/index.scss
+++ b/src/components/video/index.scss
@@ -1,4 +1,3 @@
-@import 'src/styles/fonts';
 @import 'src/styles/sizes';
 
 .video-wrapper {
@@ -8,8 +7,8 @@
 }
 
 .video-js {
-  font-family: $font-family;
-  font-weight: $font-weight-regular;
+  font-family: var(--font-family);
+  font-weight: var(--font-weight-regular);
 }
 
 .video-js .vjs-big-play-button,
