--- a/src/index.scss
+++ b/src/index.scss
@@ -10,8 +10,8 @@ html {
 
 body {
   background-color: var(--body-background-color);
-  font-family: $font-family;
-  font-weight: $font-weight-regular;
+  font-family: var(--font-family);
+  font-weight: var(--font-weight-regular);
   margin: 0;
   overflow: hidden;
 }
