--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -22,11 +22,11 @@
   font-weight: 700;
 }
 
-$source-sans-pro: 'Source Sans Pro', sans-serif;
+:root {
+  --font-weight-light: 300;
+  --font-weight-regular: 400;
+  --font-weight-semi-bold: 600;
+  --font-weight-bold: 700;
 
-$font-weight-light: 300;
-$font-weight-regular: 400;
-$font-weight-semi-bold: 600;
-$font-weight-bold: 700;
-
-$font-family: $source-sans-pro;
+  --font-family: 'Source Sans Pro', sans-serif;
+}
