--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -84,7 +84,7 @@ $error-font-size: 5rem;
 
   div {
     animation: dots 1.4s infinite ease-in-out both;
-    background-color: var(--white);
+    background-color: var(--gray);
     border-radius: 100%;
     display: inline-block;
     height: $loading-dot-size;
