--- a/src/components/utils/button/index.scss
+++ b/src/components/utils/button/index.scss
@@ -13,6 +13,7 @@ $button-size: 2.75rem;
     cursor: pointer;
     font-size: large;
     height: $button-size;
+    outline: none;
     width: $button-size;
   }
 
