--- a/src/components/thumbnails/index.scss
+++ b/src/components/thumbnails/index.scss
@@ -41,8 +41,10 @@ $thumbnail-height: 90px;
     cursor: pointer;
     display: block;
     height: 100%;
+    outline: none;
     width: auto;
 
+    &:focus,
     &:hover {
       filter: opacity(50%);
     }
