Build base for single content playback
This work is a starting point for building a more dynamic and automatic layout
for the recording's playback.

This first idea is to provide a better space usage for recordings that do
not provide presentation related data, such as slides, annotations, cursor
and panzooms nor screenshare (which occupies the same location at the playback).

To use this option in custom builds and avoid the playback trying to fetch for
files that will never exist in a recording, the missing files can be removed
from files.data at config.json.

e.g. for a webcams with closed captions and chat case:
...
  "files": {
    "data": {
      "captions": "captions.json",
      "chat": "slides_new.xml",
      "metadata": "metadata.xml"
    },
...

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -37,6 +37,15 @@ $error-font-size: 5rem;
   }
 }
 
+.single-content {
+  grid-template-areas:
+    "navigation-bar content"
+    "application content"
+    "application content"
+    "action-bar content";
+  grid-template-rows: $navigation-bar-height auto auto calc(#{$action-bar-height} / 2);
+}
+
 .hidden-section {
   grid-template-areas:
     "media navigation-bar"
@@ -253,6 +262,16 @@ $error-font-size: 5rem;
     }
   }
 
+  .single-content {
+    grid-template-areas:
+      "application navigation-bar"
+      "application content"
+      "application content"
+      "application content"
+      "application action-bar";
+    grid-template-rows: $navigation-bar-height $media-fit-height auto auto calc(#{$action-bar-height} / 2);
+  }
+
   .hidden-section {
     grid-template-columns: 0% auto;
   }
@@ -266,6 +285,10 @@ $error-font-size: 5rem;
     .player-wrapper {
       grid-template-columns: $section-width-small auto;
       grid-template-rows: $navigation-bar-height $media-fit-height-small auto auto $action-bar-height;
+    }
+
+    .single-content {
+      grid-template-rows: $navigation-bar-height $media-fit-height-small auto auto calc(#{$action-bar-height} / 2);
     }
 
     .hidden-section {
