Fix error font color

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -83,7 +83,7 @@ $error-font-size: 5rem;
 }
 
 .error-code {
-  color: var(--white);
+  color: var(--gray);
   font-size: $error-font-size;
   font-weight: var(--font-weight-bold);
 }
