--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -10,6 +10,8 @@ $video-width: 640px;
 $section-width: calc(#{$video-width} / 2);
 $section-width-small: calc((#{$video-width} / 8) * 3);
 
+$bottom-content-height: 80px;
+
 $bar-height: 60px;
 
 $navigation-bar-height: $bar-height;
