Action bar cleanup
Renamed the navigation and action bars to top and bottom bar since we are
moving them away from the HTML5 client design. Removed all buttons from the
bottom and pushed the swap button temporarily up to the top.

--- a/src/components/bars/index.scss
+++ b/src/components/bars/index.scss
@@ -1,43 +1,10 @@
 @import 'src/styles/sizes';
 
-.navigation-bar {
+.top-bar {
   background-color: var(--main-background-color);
-  grid-area: navigation-bar;
-
-  .title {
-    color: var(--title-color);
-    overflow: hidden;
-    padding: $padding-small;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-
-  .button-wrapper {
-    .solid {
-      &:focus {
-        border: solid var(--main-background-color);
-      }
-    }
-  }
-}
-
-.action-bar {
-  background-color: var(--main-background-color);
-  grid-area: action-bar;
-
-  .button-wrapper {
-    .solid {
-      &:focus {
-        border: solid var(--main-background-color);
-      }
-    }
-  }
-}
-
-.action-bar,
-.navigation-bar {
-  display: flex;
   box-sizing: border-box;
+  display: flex;
+  grid-area: top-bar;
   overflow: hidden;
   padding: 0 $padding-small;
 
@@ -69,4 +36,17 @@
   .right {
     justify-content: flex-end;
   }
+
+  .title {
+    color: var(--title-color);
+    overflow: hidden;
+    padding: $padding-small;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
+
+.bottom-bar {
+  background-color: var(--main-background-color);
+  grid-area: bottom-bar;
 }
