--- a/src/components/thumbnails/index.scss
+++ b/src/components/thumbnails/index.scss
@@ -46,7 +46,7 @@ $thumbnail-height: calc((#{$bottom-content-height} / 10) * 6);
 
     .screenshare {
       color: var(--gray);
-      font-size: xx-large;
+      font-size: xxx-large;
       font-weight: var(--font-weight-semi-bold);
     }
   }
