--- a/src/components/bars/index.scss
+++ b/src/components/bars/index.scss
@@ -1,7 +1,7 @@
 @import 'src/styles/sizes';
 
 .top-bar {
-  background-color: var(--main-background-color);
+  background-color: var(--top-bar-background-color);
   box-sizing: border-box;
   display: flex;
   grid-area: top-bar;
@@ -47,6 +47,6 @@
 }
 
 .bottom-bar {
-  background-color: var(--main-background-color);
+  background-color: var(--bottom-bar-background-color);
   grid-area: bottom-bar;
 }
