--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -14,6 +14,14 @@ $error-font-size: 5rem;
   width: 100%;
 }
 
+.error-wrapper {
+  background-color: var(--error-background-color);
+}
+
+.loader-wrapper {
+  background-color: var(--loader-background-color);
+}
+
 .player-wrapper {
   box-sizing: border-box;
   display: grid;
@@ -82,7 +90,7 @@ $error-font-size: 5rem;
 }
 
 .error-code {
-  color: var(--gray);
+  color: var(--error-code-color);
   font-size: $error-font-size;
   font-weight: var(--font-weight-bold);
 }
@@ -92,7 +100,7 @@ $error-font-size: 5rem;
 
   div {
     animation: dots 1.4s infinite ease-in-out both;
-    background-color: var(--gray);
+    background-color: var(--loading-dots-background-color);
     border-radius: 100%;
     display: inline-block;
     height: $loading-dot-size;
@@ -126,7 +134,6 @@ $error-font-size: 5rem;
 }
 
 .content {
-  background-color: var(--main-background-color);
   display: flex;
   flex-direction: column;
   grid-area: content;
@@ -134,6 +141,7 @@ $error-font-size: 5rem;
   width: 100%;
 
   .top-content {
+    background-color: var(--top-content-background-color);
     display: flex;
     height: 100%;
     position: relative;
@@ -153,7 +161,7 @@ $error-font-size: 5rem;
   }
 
   .video-js {
-    background-color: var(--main-background-color);
+    background-color: var(--top-content-background-color);
   }
 
   .button-wrapper {
@@ -166,32 +174,35 @@ $error-font-size: 5rem;
 }
 
 .swapped-content {
-  background-color: var(--section-background-color);
   grid-area: media;
 
+  .top-content {
+    background-color: var(--media-background-color);
+  }
+
   .video-js {
-    background-color: var(--section-background-color);
+    background-color: var(--media-background-color);
   }
 }
 
 .media {
-  background-color: var(--section-background-color);
+  background-color: var(--media-background-color);
   display: flex;
   grid-area: media;
   height: 100%;
   width: 100%;
 
   .video-js {
-    background-color: var(--section-background-color);
+    background-color: var(--media-background-color);
   }
 }
 
 .swapped-media {
-  background-color: var(--main-background-color);
+  background-color: var(--top-content-background-color);
   grid-area: content;
 
   .video-js {
-    background-color: var(--main-background-color);
+    background-color: var(--top-content-background-color);
   }
 
   .button-wrapper {
@@ -204,7 +215,7 @@ $error-font-size: 5rem;
 }
 
 .application {
-  background-color: var(--section-background-color);
+  background-color: var(--application-background-color);
   display: flex;
   flex-direction: column;
   grid-area: application;
