--- a/src/components/video/index.scss
+++ b/src/components/video/index.scss
@@ -35,7 +35,7 @@
 }
 
 .vjs-control-bar {
-  background-color: var(--control-bar-color) !important;
+  background-color: var(--control-bar-background-color) !important;
   display: flex !important;
   position: fixed !important;
   z-index: 1 !important;
