--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -90,7 +90,7 @@ $error-font-size: 5rem;
 }
 
 .error-code {
-  color: var(--error-code-color);
+  color: var(--error-color);
   font-size: $error-font-size;
   font-weight: var(--font-weight-bold);
 }
@@ -100,7 +100,7 @@ $error-font-size: 5rem;
 
   div {
     animation: dots 1.4s infinite ease-in-out both;
-    background-color: var(--loading-dots-background-color);
+    background-color: var(--loader-color);
     border-radius: 100%;
     display: inline-block;
     height: $loading-dot-size;
@@ -142,6 +142,7 @@ $error-font-size: 5rem;
 
   .top-content {
     background-color: var(--top-content-background-color);
+    color: var(--top-content-color);
     display: flex;
     height: 100%;
     position: relative;
@@ -150,10 +151,22 @@ $error-font-size: 5rem;
 
   .bottom-content {
     background-color: var(--bottom-content-background-color);
+    color: var(--bottom-content-color);
     display: flex;
     min-height: $bottom-content-height;
     position: relative;
     width: 100%;
+
+    .active {
+      background-color: var(--bottom-content-active-background-color);
+    }
+
+    .interactive {
+      &:focus,
+      &:hover {
+        background-color:var(--bottom-content-active-background-color);
+      }
+    }
   }
 
   .inactive {
@@ -167,7 +180,7 @@ $error-font-size: 5rem;
   .button-wrapper {
     .solid {
       &:focus {
-        box-shadow: 0 0 0 $margin-extra-small var(--button-box-shadow-color);
+        box-shadow: 0 0 0 $margin-small var(--box-shadow-color);
       }
     }
   }
@@ -178,6 +191,7 @@ $error-font-size: 5rem;
 
   .top-content {
     background-color: var(--media-background-color);
+    color: var(--media-color);
   }
 
   .video-js {
@@ -208,7 +222,7 @@ $error-font-size: 5rem;
   .button-wrapper {
     .solid {
       &:focus {
-        box-shadow: 0 0 0 $margin-extra-small var(--button-box-shadow-color);
+        box-shadow: 0 0 0 $margin-small var(--box-shadow-color);
       }
     }
   }
@@ -216,6 +230,7 @@ $error-font-size: 5rem;
 
 .application {
   background-color: var(--application-background-color);
+  color: var(--application-color);
   display: flex;
   flex-direction: column;
   grid-area: application;
@@ -230,7 +245,6 @@ $error-font-size: 5rem;
 
     .application-icon {
       box-sizing: border-box;
-      color: var(--gray);
       display: flex;
       font-size: large;
       font-weight: var(--font-weight-semi-bold);
@@ -247,8 +261,8 @@ $error-font-size: 5rem;
     }
 
     .inactive {
-      color: var(--gray-light);
       cursor: pointer;
+      opacity: .75;
     }
   }
 }
