--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -21,54 +21,70 @@
 
   --body-background-color: var(--white-dark);
 
+  --box-shadow-color: var(--gray-light);
+
   --loader-background-color: var(--white-dark);
-  --loading-dots-background-color: var(--gray);
+  --loader-color: var(--gray);
 
   --error-background-color: var(--white-dark);
-  --error-code-color: var(--gray);
-
-  --button-color: var(--blue);
-  --button-box-shadow-color: rgba(15, 112, 215, .5);
-  --button-default-font-color: var(--gray);
-  --button-solid-font-color: var(--white);
-
-  --thumbnail-active-background-color: var(--gray-lighter);
-  --thumbnail-font-color: var(--gray);
+  --error-color: var(--gray);
 
   --media-background-color: var(--white);
+  --media-color: var(--gray-dark);
+
   --application-background-color: var(--white);
+  --application-color: var(--gray-dark);
 
   --top-bar-background-color: var(--white-dark);
+  --top-bar-color: var(--gray);
+
   --bottom-bar-background-color: var(--white-dark);
+  --bottom-bar-color: var(--gray);
 
   --top-content-background-color: var(--white-dark);
+  --top-content-color: var(--gray);
+
+  --bottom-content-active-background-color: var(--gray-lighter);
   --bottom-content-background-color: var(--gray-lightest);
+  --bottom-content-color: var(--gray);
 
-  --control-bar-color: var(--gray-dark);
+  --button-default-background-color: transparent;
+  --button-default-color: var(--gray);
 
-  --cursor-color: var(--red);
+  --button-disabled-background-color: var(--gray-light);
+  --button-disabled-color: var(--white);
 
-  --marker-color: var(--red);
+  --button-ghost-background-color: transparent;
+  --button-ghost-color: var(--gray);
+
+  --button-solid-background-color: var(--blue);
+  --button-solid-color: var(--white);
 
   --modal-background-color: var(--white);
+  --modal-color: var(--gray);
   --modal-wrapper-background-color: rgba(6, 23, 42, .25);
 
-  --title-color: var(--gray);
+  --control-bar-background-color: var(--gray-dark);
 
-  --avatar-zero-color: rgb(123, 31, 162);
-  --avatar-one-color: rgb(106, 27, 154);
-  --avatar-two-color: rgb(74, 20, 140);
-  --avatar-three-color: rgb(94, 53, 177);
-  --avatar-four-color: rgb(81, 45, 168);
-  --avatar-five-color: rgb(69, 39, 160);
-  --avatar-six-color: rgb(49, 27, 146);
-  --avatar-seven-color: rgb(57, 73, 171);
-  --avatar-eight-color: rgb(48, 63, 159);
-  --avatar-nine-color: rgb(40, 53, 147);
-  --avatar-ten-color: rgb(26, 35, 126);
-  --avatar-eleven-color: rgb(25, 118, 210);
-  --avatar-twelve-color: rgb(21, 101, 192);
-  --avatar-thirteen-color: rgb(13, 71, 161);
-  --avatar-fourteen-color: rgb(2, 119, 189);
-  --avatar-fifteen-color: rgb(1, 87, 155);
+  --cursor-fill-color: var(--red);
+
+  --marker-background-color: var(--red);
+
+  --avatar-color: var(--white);
+  --avatar-zero-background-color: rgb(123, 31, 162);
+  --avatar-one-background-color: rgb(106, 27, 154);
+  --avatar-two-background-color: rgb(74, 20, 140);
+  --avatar-three-background-color: rgb(94, 53, 177);
+  --avatar-four-background-color: rgb(81, 45, 168);
+  --avatar-five-background-color: rgb(69, 39, 160);
+  --avatar-six-background-color: rgb(49, 27, 146);
+  --avatar-seven-background-color: rgb(57, 73, 171);
+  --avatar-eight-background-color: rgb(48, 63, 159);
+  --avatar-nine-background-color: rgb(40, 53, 147);
+  --avatar-ten-background-color: rgb(26, 35, 126);
+  --avatar-eleven-background-color: rgb(25, 118, 210);
+  --avatar-twelve-background-color: rgb(21, 101, 192);
+  --avatar-thirteen-background-color: rgb(13, 71, 161);
+  --avatar-fourteen-background-color: rgb(2, 119, 189);
+  --avatar-fifteen-background-color: rgb(1, 87, 155);
 }
