Title as an about modal button

--- a/src/components/about/index.scss
+++ b/src/components/about/index.scss
@@ -83,7 +83,7 @@
     padding: $padding 0 0 0;
     width: 100%;
 
-    .key {
+    .value {
       box-sizing: border-box;
       padding: 0 $padding-small;
     }
