--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -14,70 +14,71 @@
   justify-content: center;
 }
 
-.icon-users:before {
-  content: "\e905";
-}
 
-.icon-arrow-up:before {
-  content: "\e906";
+.icon-arrow-left:before {
+  content: "\e90d";
 }
 
 .icon-arrow-right:before {
   content: "\e90a";
 }
 
-.icon-presentation:before {
-  content: "\e90b";
-}
-
-.icon-arrow-left:before {
-  content: "\e90d";
+.icon-captions:before {
+  content: "\e957";
 }
 
 .icon-chat:before {
   content: "\e910";
 }
 
-.icon-close:before {
-  content: "\e912";
+.icon-check:before {
+  content: "\e946";
 }
 
-.icon-screenshare:before {
-  content: "\e928";
+.icon-close:before {
+  content: "\e912";
 }
 
 .icon-fullscreen:before {
   content: "\e92a";
 }
 
-.icon-settings:before {
-  content: "\e92b";
+.icon-notes:before {
+  content: "\e94a";
 }
 
-.icon-video:before {
-  content: "\e930";
+.icon-presentation:before {
+  content: "\e90b";
 }
 
 .icon-restore:before {
   content: "\e935";
 }
 
-.icon-check:before {
-  content: "\e946";
+.icon-screenshare:before {
+  content: "\e928";
 }
 
-.icon-swap:before {
-  content: "\e949";
+.icon-search:before {
+  content: "\e958";
+}
+
+.icon-settings:before {
+  content: "\e92b";
 }
 
 .icon-shortcuts:before {
   content: "\e94b";
 }
 
-.icon-captions:before {
-  content: "\e957";
+.icon-swap:before {
+  content: "\e949";
 }
 
-.icon-notes:before {
-  content: "\e94a";
+.icon-users:before {
+  content: "\e905";
+}
+
+.icon-video:before {
+  content: "\e930";
 }
