Add new search experience
Removed videojs marker plugin and included a new search experience.

Search modal will preview the thumbnails search result and will propagate
it to the thumbnails area.

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -162,6 +162,9 @@ $error-font-size: 5rem;
     }
 
     .interactive {
+      cursor: pointer;
+      outline: none;
+
       &:focus,
       &:hover {
         background-color:var(--bottom-content-active-background-color);
