--- a/src/components/utils/modal/index.scss
+++ b/src/components/utils/modal/index.scss
@@ -47,4 +47,8 @@
     flex-direction: column;
     padding: 0 $padding;
   }
+
+  .active {
+    background-color: var(--modal-active-background-color);
+  }
 }
