--- a/src/components/thumbnails/index.scss
+++ b/src/components/thumbnails/index.scss
@@ -11,14 +11,18 @@ $thumbnail-height: calc((#{$bottom-content-height} / 10) * 6);
   position: absolute;
   scroll-behavior: smooth;
   width: 100%;
+
+  .clear-button {
+    box-sizing: border-box;
+    display: flex;
+    padding: $padding 0 0 0;
+  }
 }
 
 .thumbnail-wrapper {
   box-sizing: border-box;
-  cursor: pointer;
   display: flex;
   padding: $padding-extra-small;
-  outline: none;
 
   .thumbnail {
     align-self: flex-start;
